--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,15 +2,15 @@
 {% load static %}
 {% block content %}
     <div class="row align-items-center">
-        <div class="col-5">
+        <div class="col-md-5 col-sm-12 text-center my-auto">
             <h1 class="quote">
                 Reading is to the mind what,
                 exercise is to the body.
             </h1>
             <a href="#" class="link-books">See Available Books.</a>
         </div>
-        <div class="col-7">
-            <img src="{% static 'images/bookshelves.png' %}" alt="" class="w-100 ml-5">
+        <div class="col-md-7 col-sm-12">
+            <img src="{% static 'images/bookshelves.png' %}" alt="" class="w-100">
         </div>
     </div>
 {% endblock %}
