--- a/templates/base.html
+++ b/templates/base.html
@@ -73,18 +73,18 @@
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
-				<form action="" method="POST">
+				<form class="login-form" action="" method="POST">
 					<div class="modal-body">
 						<div class="form-label-group">
-							<input type="email" id="inputEmail" class="form-control" placeholder="Email address"
+							<input type="email" id="username" class="form-control" placeholder="Email address"
 								required autofocus>
-							<label for="inputEmail">Email address</label>
+							<label for="username">Email address</label>
 						</div>
 
 						<div class="form-label-group">
-							<input type="password" id="inputPassword" class="form-control" placeholder="Password"
+							<input type="password" id="password" class="form-control" placeholder="Password"
 								required>
-							<label for="inputPassword">Password</label>
+							<label for="password">Password</label>
 						</div>
 					</div>
 					<div class="modal-footer">
@@ -106,31 +106,33 @@
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
-				<form action="{% url 'register' %}" method="POST">
-				{% csrf_token %}
+				<form class="register-form">
+					{% csrf_token %}
 					<div class="modal-body">
 						<div class="form-label-group">
-							<input type="text" id="username" name="username" class="form-control" placeholder="Username" required
-								autofocus>
-							<label for="username">Username</label>
+							<input type="text" id="inputUsername" name="username" class="form-control" placeholder="Username"
+								required autofocus>
+							<label for="inputUsername">Username</label>
 						</div>
 						<div class="form-label-group">
-							<input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required
-								autofocus>
+							<input type="email" id="inputEmail" name="email" class="form-control"
+								placeholder="Email address" required autofocus>
 							<label for="inputEmail">Email address</label>
 						</div>
 
 						<div class="form-label-group">
-							<input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+							<input type="password" id="inputPassword" name="password" class="form-control"
+								placeholder="Password" required>
 							<label for="inputPassword">Password</label>
 						</div>
 						<div class="form-label-group">
-							<input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Confirm Password"
-								required>
+							<input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
+								placeholder="Confirm Password" required>
 							<label for="confirmPassword">Confirm Password</label>
 						</div>
 					</div>
 					<div class="modal-footer">
+						<p id="error-alert" class="text-danger"></p>
 						<button type="Submit" class="btn btn-primary btn-block rounded-pill">Register</button>
 					</div>
 				</form>
@@ -140,20 +142,6 @@
 </body>
 <script src="{% static 'JS/jquery-3.4.1.js' %}"></script>
 <script src="{% static 'JS/bootstrap.bundle.js' %}"></script>
-<!-- <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"
-  ></script> -->
+<script src="{% static 'JS/base.js' %}"></script>
 
 </html>
