--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
 						<button type="Submit" class="btn btn-primary btn-block rounded-pill">Log In</button>
 					</div>
 				</form>
-				<p class="mb-3 text-muted text-center">Dont Have an account? <a href="#">Sign Up!</a></p>
+				<p class="mb-3 text-muted text-center">Dont Have an account? <a href="#" class="signup-toggle">Sign Up!</a></p>
 			</div>
 		</div>
 	</div>
