--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>Home</title>
-	<!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    /> -->
 	<link rel="stylesheet" href="{% static 'CSS/bootstrap.css' %}" />
 	<link rel="stylesheet" href="{% static 'CSS/style.css' %}" />
 </head>
@@ -21,7 +15,7 @@
 	<!-- navbar -->
 	<div class="my-container">
 		<nav class="navbar navbar-expand-lg">
-			<a class="navbar-brand" href="#"><img src="{% static 'images/ShareBooks.png' %}" alt=""
+			<a class="navbar-brand" href="{% url 'home_page' %}"><img src="{% static 'images/ShareBooks.png' %}" alt=""
 					class="site-logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
 				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,12 +30,12 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							{% if user.is_authenticated %}
-								<a class="dropdown-item" href="#">My Profile</a>
+								<a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
 								<a class="dropdown-item" href="#">SignasdfUp</a>
 								<a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
 							{% else %}
 								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalSignup">Sign Up</a>
-								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#modalLogin">Log In</a>
+								<a class="dropdown-item" href="{% url 'login' %}">Log In</a>
 							{% endif %}
 						</div>
 					</li>
@@ -64,6 +58,17 @@
 		</form>
 		<hr>
 	</div>
+	<!-- messeges -->
+			{% if messages %}
+				{% for message in messages %}
+					<div class="alert alert-{{ message.tags }} text-center alert-dismissible fade show" >
+						{{ message }}
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+				{% endfor %}
+			{% endif %}
 	<!-- content -->
 
 	<div class="my-container">
@@ -95,7 +100,7 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<p id="error-alert-login" class="text-danger mr-auto">fffff</p>
+						<p id="error-alert-login" class="text-danger mr-auto"></p>
 						<button type="Submit" class="btn btn-primary btn-block rounded-pill">Log In</button>
 					</div>
 				</form>
@@ -103,7 +108,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- model signup-div -->
+	<!-- modal signup-div -->
 	<div class="modal fade" id="modalSignup" tabindex="-1" role="dialog" aria-labelledby="modalSignup"
 		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
