--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    {{dasdfsdfsdfta}}
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+    {% if user.is_authenticated %}
+        <h1>{{ user.username }}</h1>
+    {% else %}
+        <div class="container text-center">
+            <h3 class="text-danger" >Login to see your profile</h3>
+            <button class="btn btn-danger rounded-pill search-btn mt-1" onclick="toggleLogin()" >Login</button>
+        </div>
+    {% endif %}
+{% endblock %}
