--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -9,22 +9,22 @@
             </p>
         </div>
         <div class="form-label-group">
-            <input type="text" id="username" class="form-control" placeholder="Username" required>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required>
             <label for="username">Username</label>
         </div>
 
         <div class="form-label-group">
-            <input type="email" id="email" class="form-control" placeholder="Email address" required autofocus>
+            <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus>
             <label for="email">Email address</label>
         </div>
 
         <div class="form-label-group">
-            <input type="password" id="password" class="form-control" placeholder="Password" required>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
             <label for="password">Password</label>
         </div>
 
         <div class="form-label-group">
-            <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm Password" required>
+            <input type="password" id="confirmPassword" name="username" class="form-control" placeholder="Confirm Password" required>
             <label for="confirmPassword">Confirm Password</label>
         </div>
 
