--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							{% if user.is_authenticated %}
 								<a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
-								<a class="dropdown-item" href="#">SignasdfUp</a>
+								<a class="dropdown-item" href="{% url 'books-add' %}">Add Books</a>
 								<a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
 							{% else %}
 								<a class="dropdown-item" href="{% url 'register' %}">Sign Up</a>
