--- a/books/templates/books/bookdetails_form.html
+++ b/books/templates/books/bookdetails_form.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+    Book Add/Update
+{% endblock title %}
 {% block content %}
     <form class="form-signin pt-5" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
         <div class="text-center mb-4">
-            <h1 class="h3 mb-3 font-weight-normal">Add Books</h1>
+            <h1 class="h3 mb-3 font-weight-normal">Books</h1>
             <p>
                 Add Books that you want to share.
             </p>
