--- a/books/templates/books/books_detail.html
+++ b/books/templates/books/books_detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+    Book Detail
+{% endblock title %}
 {% block content %}
 <div class="container mt-5 mr-3">
     <div class="card border-primary mb-3" style="max-width: 740px;">
@@ -18,10 +21,11 @@
             <h6 class="card-title">Belongs to: <strong>{{ book.added_by }}</strong></h6>
             <div class="text-right">
                 {% if user == book.added_by %}
-                <a href="{% url 'books-delete' book.pk %}" class="btn btn-outline-danger rounded-pill mb-3">Delete</a>
-                <a href="{% url 'books-update' book.pk %}" class="btn btn-outline-info rounded-pill mb-3">Update</a>
+                    <a href="{% url 'books-delete' book.pk %}" class="btn btn-outline-danger rounded-pill mb-3">Delete</a>
+                    <a href="{% url 'books-update' book.pk %}" class="btn btn-outline-info rounded-pill mb-3">Update</a>
+                {% else %}
+                    <a href="" class="btn btn-primary rounded-pill mb-3">Request</a>
                 {% endif %}
-                <a href="" class="btn btn-primary rounded-pill mb-3">Request</a>
             </div>
             <p class="card-text">Description: <br> <small>{{ book.description }}.</small></p>
         </div>
