working on book request

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+    Register
+{% endblock title %}
 {% block content %}
     <form class="form-signin pt-5">
         <div class="text-center mb-4">
