--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+    Home
+{% endblock title %}
 {% block content %}
     <div class="row align-items-center">
         <div class="col-md-5 col-sm-12 text-center my-auto">
@@ -7,7 +10,7 @@
                 Reading is to the mind what,
                 exercise is to the body.
             </h1>
-            <a href="#" class="link-books">See Available Books.</a>
+            <a href="{% url 'books-home' %}" class="link-books">See Available Books.</a>
         </div>
         <div class="col-md-7 col-sm-12">
             <img src="{% static 'images/bookshelves.png' %}" alt="" class="w-100">
