--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>
-		ShareBooks | 
 		{% block title %}
 		{% endblock title %}
 	</title>
@@ -35,7 +34,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							{% if user.is_authenticated %}
-								<a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+								<a class="dropdown-item" href="{% url 'profile' user.username %}">My Profile</a>
 								<a class="dropdown-item" href="{% url 'books-add' %}">Add Books</a>
 								<a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
 							{% else %}
@@ -45,7 +44,7 @@
 						</div>
 					</li>
 					<li class="nav-item pt-2 ml-2">
-						<a class="nav-link" href="#">Home</a>
+						<a class="nav-link" href="{% url 'home_page' %}">Home</a>
 					</li>
 					<li class="nav-item pt-2 ml-2">
 						<a class="nav-link" href="{% url 'books-home' %}">Book Collection</a>
