--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+    Login
+{% endblock title %}
 {% block content %}
     <form class="form-signin pt-5" method="POST" action="{% url 'login' %}">
         {% csrf_token %}
