--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,12 +1,55 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+Profile | {{ user.username }}
+{% endblock title %}
 {% block content %}
-    {% if user.is_authenticated %}
-        <h1>{{ user.username }}</h1>
-    {% else %}
-        <div class="container text-center">
-            <h3 class="text-danger" >Login to see your profile</h3>
-            <button class="btn btn-danger rounded-pill search-btn mt-1" onclick="toggleLogin()" >Login</button>
+<h1>{{ user.username }}</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab" aria-controls="home"
+                        aria-selected="true">Home</a>
+                    <a class="nav-link" id="edit-profile-tab" data-toggle="pill" href="#edit-profile" role="tab"
+                        aria-controls="edit-profile" aria-selected="false">Edit Profile</a>
+                    <a class="nav-link" id="added-books-tab" data-toggle="pill" href="#added-books" role="tab"
+                        aria-controls="added-books" aria-selected="false">Added Books</a>
+                    <a class="nav-link" id="created-requests-tab" data-toggle="pill" href="#created-requests" role="tab"
+                        aria-controls="created-requests" aria-selected="false">Created Requests</a>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="tab-content" id="v-pills-tabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <p>Username : {{ user.username }}</p>
+                        <p>E-Mail   : {{ user.email }}</p>
+                    </div>
+                    <div class="tab-pane fade" id="edit-profile" role="tabpanel" aria-labelledby="edit-profile-tab">
+                        <form action="">
+                            <div class="form-label-group">
+                                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required value = "{{ user.username }}">
+                                <label for="username">Username</label>
+                            </div>
+                            <div class="form-label-group">
+                                <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required value = "{{ user.email }}">
+                                <label for="email">Email address</label>
+                            </div>
+                            <button class="btn btn-lg btn-primary rounded-pill" type="submit">Edit</button>
+                        </form>
+                    </div>
+                    <div class="tab-pane fade" id="added-books" role="tabpanel" aria-labelledby="added-books-tab">
+                        <ul class="list-group list-group-flush">
+                            {% for book in books %}
+                                <li class="list-group-item"><a href="{% url 'books-detail' book.pk %}">{{ book.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="tab-pane fade" id="created-requests" role="tabpanel" aria-labelledby="created-requests-tab">
+                        requests
+                    </div>
+                </div>
+            </div>
         </div>
-    {% endif %}
+    </div>
 {% endblock %}
