the project is complete

--- a/books/templates/books/bookdetails_form.html
+++ b/books/templates/books/bookdetails_form.html
@@ -4,7 +4,7 @@
     Book Add/Update
 {% endblock title %}
 {% block content %}
-    <form class="form-signin pt-5" method="POST" enctype="multipart/form-data">
+    <form class="form-signin pt-5" method="POST"  enctype="multipart/form-data">
     {% csrf_token %}
         <div class="text-center mb-4">
             <h1 class="h3 mb-3 font-weight-normal">Books</h1>
@@ -12,8 +12,8 @@
                 Add Books that you want to share.
             </p>
         </div>
-        <div> 
-        {{ form.as_p }}
+        <div class="form-elements">
+            {{ form.as_p }}
         </div>
         <button class="btn btn-lg btn-primary btn-block rounded-pill" type="submit">Add Book</button>
     </form>
