--- a/books/templates/books/request_update.html
+++ b/books/templates/books/request_update.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <div class="container">
-    <form action="{% url 'books-request' requested_book.id %}" method="POST">
+    <form action="{% url 'books-request-update' current_request.id %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
             <label for="requested_by">Requested by:</label>
@@ -28,7 +28,7 @@
             </select>
         </div>
         <div class="text-center">
-            <button class="btn btn-md btn-primary rounded-pill text-center" type="submit">Request</button>
+            <button class="btn btn-md btn-primary rounded-pill text-center" type="submit">Update</button>
         </div>
     </form>
     </div>
