--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							{% if user.is_authenticated %}
 								<a class="dropdown-item" href="{% url 'profile' user.username %}">My Profile</a>
+								<a class="dropdown-item" href="{% url 'notification' user.username %}">Notification</a>
 								<a class="dropdown-item" href="{% url 'books-add' %}">Add Books</a>
 								<a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
 							{% else %}
