--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -19,7 +19,7 @@
     <div class="ml-5">
         <div class="row ">
             {% for book in books %}
-                <div class="col-md-4 pb-3" >
+                <div class="col-lg-4 col-md-6pb-3" >
                     <div class="card text-center mr-2" style="width: 15rem;">
                         <img src="{{ book.image.url }}" class="card-img-top w-50 ml-5 mt-3 img-thumbnail" alt="..." >
                         <div class="card-body">
