--- a/users/templates/users/notification.html
+++ b/users/templates/users/notification.html
@@ -4,8 +4,8 @@
 Notifications | {{ user.username }}
 {% endblock title %}
 {% block content %}
-    <div class="container d-flex">
-        <div class="col-md-6">
+    <div class="row">
+        <div class="col-md-6 pb-5 pl-5">
             <h4>Your Requests</h4>
             <ul class="list-group list-group-flush">
                 {% for user_request in accepted_requests %}
