--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,41 +1,43 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    Register
+Register
 {% endblock title %}
 {% block content %}
-    <form class="form-signin pt-5 register-form" method="POST" action="{% url 'register' %}">
-        {% csrf_token %}
-        <div class="text-center mb-4">
-            <h1 class="h3 mb-3 font-weight-normal">Register</h1>
-            <p>
-                Connect with the readers like you.
-            </p>
-        </div>
-        <div class="form-label-group">
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required>
-            <label for="username">Username</label>
-            <small class="error"></small>
-        </div>
+<!-- form to register the user -->
+<form class="form-signin pt-5 register-form" method="POST" action="{% url 'register' %}">
+    {% csrf_token %}
+    <div class="text-center mb-4">
+        <h1 class="h3 mb-3 font-weight-normal">Register</h1>
+        <p>
+            Connect with the readers like you.
+        </p>
+    </div>
+    <div class="form-label-group">
+        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required>
+        <label for="username">Username</label>
+        <small class="error"></small>
+    </div>
 
-        <div class="form-label-group">
-            <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required>
-            <label for="email">Email address</label>
-            <small class="error"></small>
-        </div>
+    <div class="form-label-group">
+        <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required>
+        <label for="email">Email address</label>
+        <small class="error"></small>
+    </div>
 
-        <div class="form-label-group">
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-            <label for="password">Password</label>
-            <small class="error"></small>
-        </div>
+    <div class="form-label-group">
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+        <label for="password">Password</label>
+        <small class="error"></small>
+    </div>
 
-        <div class="form-label-group">
-            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Confirm Password" required>
-            <label for="confirmPassword">Confirm Password</label>
-            <small class="error"></small>
-        </div>
+    <div class="form-label-group">
+        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
+            placeholder="Confirm Password" required>
+        <label for="confirmPassword">Confirm Password</label>
+        <small class="error"></small>
+    </div>
 
-        <button class="btn btn-lg btn-primary btn-block rounded-pill" type="submit">Register</button>
-    </form>
+    <button class="btn btn-lg btn-primary btn-block rounded-pill" type="submit">Register</button>
+</form>
 {% endblock %}
