--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    Login
+Login
 {% endblock title %}
 {% block content %}
+    <!-- form for login -->
     <form class="form-signin pt-5" method="POST" action="{% url 'login' %}">
         {% csrf_token %}
         <div class="text-center mb-4">
