--- a/users/templates/users/notification.html
+++ b/users/templates/users/notification.html
@@ -4,56 +4,73 @@
 Notifications | {{ user.username }}
 {% endblock title %}
 {% block content %}
-    <div class="row">
-        <div class="col-md-6 pb-5 pl-5">
-            <h4>Your Requests</h4>
-            <ul class="list-group list-group-flush">
-                {% for user_request in accepted_requests %}
-                    <li class="list-group-item">
-                        <div class="media">
-                            <img src="{{ user_request.requested_book.image.url }}" class="mr-3" width="80px" alt="...">
-                            <div class="media-body">
-                                <small><span class="text-muted">Requested Book  : </span> {{ user_request.requested_book }}</small> <br>
-                                <small><span class="text-muted mt-0">Requested Trade : </span> {{ user_request.requested_trade }}</small><br>
-                                {% if user_request.is_accepted == False and user_request.is_declined == False %}
-                                    <small class="text-danger"><span class="text-muted">Request Status : </span> Pending</small><br>
-                                    <a href="{% url 'books-request-update' user_request.id %}" class="btn btn-sm btn-outline-info rounded-pill mt-2">Update</a>
-                                {% elif user_request.is_declined == True %}    
-                                    <small class="text-danger"><span class="text-muted">Request Status : </span> Rejected </small><br>
-                                {% else %}
-                                    <small class="text-info"><span class="text-muted">Request Status : </span> Accepted </small><br>
-                                {% endif %}
-                                <a href="{% url 'books-request-delete' user_request.id %}" class="btn btn-sm btn-outline-danger rounded-pill mt-2">Delete</a>
-                            </div>
+<div class="row">
+    <div class="col-md-6 pb-5 pl-5">
+        <!-- divsion for book requests of the user -->
+        <h4>Your Requests</h4>
+        <ul class="list-group list-group-flush">
+            {% for user_request in accepted_requests %}
+                <li class="list-group-item">
+                    <div class="media">
+                        <img src="{{ user_request.requested_book.image.url }}" class="mr-3" width="80px" alt="...">
+                        <div class="media-body">
+                            <small><span class="text-muted">Requested Book : </span>
+                                {{ user_request.requested_book }}
+                            </small> <br>
+                            <small><span class="text-muted mt-0">Requested Trade : </span>
+                                {{ user_request.requested_trade }}</small><br>
+                            {% if user_request.is_accepted == False and user_request.is_declined == False %}
+                                <small class="text-danger"><span class="text-muted">Request Status : </span> Pending</small><br>
+                                <a href="{% url 'books-request-update' user_request.id %}"
+                                    class="btn btn-sm btn-outline-info rounded-pill mt-2">Update</a>
+                            {% elif user_request.is_declined == True %}
+                                <small class="text-danger"><span class="text-muted">Request Status : </span> Rejected
+                                </small><br>
+                            {% else %}
+                                <small class="text-info"><span class="text-muted">Request Status : </span> Accepted </small><br>
+                            {% endif %}
+                            <a href="{% url 'books-request-delete' user_request.id %}"
+                                class="btn btn-sm btn-outline-danger rounded-pill mt-2">Delete</a>
                         </div>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div class="col-md-6">
-            <h4>Book Requested to You</h4>
-            <ul class="list-group list-group-flush">
-                {% for incoming_request in incoming_requests %}
-                    <li class="list-group-item">
-                        <div class="media">
-                            <img src="{{ incoming_request.requested_book.image.url }}" class="mr-3" width="80px" alt="...">
-                            <div class="media-body">
-                                <small><span class="text-muted mt-0">{{ incoming_request.requested_trade.username }} requested your book</span> "{{ incoming_request.requested_book }}"</small><br>
-                                <small><span class="text-muted">Wants to trade : </span> {{ incoming_request.requested_trade }}</small> <br>
-                                {% if incoming_request.is_accepted == False and incoming_request.is_declined == False %}
-                                    <small class="text-danger" id="requestStatus{{ incoming_request.id }}"><span class="text-muted">Request Status : </span> Pending</small><br>
-                                    <button class="btn btn-sm btn-outline-info rounded-pill mt-2 btnAccept" id="btnAccept{{ incoming_request.id }}" onclick="acceptClick(this)" value="{{ incoming_request.id }}">Accept</button>
-                                    <button class="btn btn-sm btn-outline-danger rounded-pill mt-2 btnReject" id="btnReject{{ incoming_request.id }}"  onclick="rejectClick(this)" value="{{ incoming_request.id }}">Reject</button>
-                                {% elif incoming_request.is_declined == True %}    
-                                    <small class="text-danger"><span class="text-muted">Request Status : </span> Rejected </small><br>
-                                {% else %}
-                                    <small class="text-primary"><span class="text-muted">Request Status : </span> Accepted </small><br>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
     </div>
+    <div class="col-md-6">
+        <!-- divsion for book requests to the user -->
+        <h4>Book Requested to You</h4>
+        <ul class="list-group list-group-flush">
+            {% for incoming_request in incoming_requests %}
+                <li class="list-group-item">
+                    <div class="media">
+                        <img src="{{ incoming_request.requested_book.image.url }}" class="mr-3" width="80px" alt="...">
+                        <div class="media-body">
+                            <small><span class="text-muted mt-0">{{ incoming_request.requested_trade.username }} requested
+                                    your book</span> "{{ incoming_request.requested_book }}"</small><br>
+                            <small><span class="text-muted">Wants to trade : </span>
+                                {{ incoming_request.requested_trade }}</small> <br>
+                            {% if incoming_request.is_accepted == False and incoming_request.is_declined == False %}
+                                <small class="text-danger" id="requestStatus{{ incoming_request.id }}"><span
+                                        class="text-muted">Request Status : </span> Pending</small><br>
+                                <button class="btn btn-sm btn-outline-info rounded-pill mt-2 btnAccept"
+                                    id="btnAccept{{ incoming_request.id }}" onclick="acceptClick(this)"
+                                    value="{{ incoming_request.id }}">Accept</button>
+                                <button class="btn btn-sm btn-outline-danger rounded-pill mt-2 btnReject"
+                                    id="btnReject{{ incoming_request.id }}" onclick="rejectClick(this)"
+                                    value="{{ incoming_request.id }}">Reject</button>
+                            {% elif incoming_request.is_declined == True %}
+                                <small class="text-danger"><span class="text-muted">Request Status : </span> Rejected
+                                </small><br>
+                            {% else %}
+                                <small class="text-primary"><span class="text-muted">Request Status : </span> Accepted
+                                </small><br>
+                            {% endif %}
+                        </div>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endblock %}
