--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,74 +4,87 @@
 Profile | {{ user.username }}
 {% endblock title %}
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-3">
-                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab" aria-controls="home"
-                        aria-selected="true">Home</a>
-                    <a class="nav-link" id="edit-profile-tab" data-toggle="pill" href="#edit-profile" role="tab"
-                        aria-controls="edit-profile" aria-selected="false">Edit Profile</a>
-                    <a class="nav-link" id="added-books-tab" data-toggle="pill" href="#added-books" role="tab"
-                        aria-controls="added-books" aria-selected="false">Added Books</a>
-                    <a class="nav-link" id="created-requests-tab" data-toggle="pill" href="#created-requests" role="tab"
-                        aria-controls="created-requests" aria-selected="false">Created Requests</a>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <a class="nav-link active" id="home-tab" data-toggle="pill" href="#home" role="tab" aria-controls="home"
+                    aria-selected="true">Home</a>
+                <a class="nav-link" id="edit-profile-tab" data-toggle="pill" href="#edit-profile" role="tab"
+                    aria-controls="edit-profile" aria-selected="false">Edit Profile</a>
+                <a class="nav-link" id="added-books-tab" data-toggle="pill" href="#added-books" role="tab"
+                    aria-controls="added-books" aria-selected="false">Added Books</a>
+                <a class="nav-link" id="created-requests-tab" data-toggle="pill" href="#created-requests" role="tab"
+                    aria-controls="created-requests" aria-selected="false">Created Requests</a>
             </div>
-            <div class="col-9">
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <p>Username : <span class="text-dark">{{ user.username }}</span></p>
-                        <p>E-Mail   : <span class="text-dark">{{ user.email }} </span></p>
-                    </div>
-                    <div class="tab-pane fade" id="edit-profile" role="tabpanel" aria-labelledby="edit-profile-tab">
-                        <form action="{% url 'update' user.id %}">
-                            <div class="form-label-group">
-                                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required value = "{{ user.username }}">
-                                <label for="username">Username</label>
-                            </div>
-                            <div class="form-label-group">
-                                <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required value = "{{ user.email }}">
-                                <label for="email">Email address</label>
-                            </div>
-                            <button class="btn btn-lg btn-primary rounded-pill" type="submit">Edit</button>
-                        </form>
-                    </div>
-                    <div class="tab-pane fade" id="added-books" role="tabpanel" aria-labelledby="added-books-tab">
-                        <ul class="list-group list-group-flush">
-                            {% for book in books %}
-                                <li class="list-group-item">
-                                    <div class="media">
-                                        <img src="{{ book.image.url }}" class="mr-3" width="80px" alt="...">
-                                        <div class="media-body">
-                                            <a class="mt-0" href="{% url 'books-detail' book.pk %}">{{ book.name }}</a> <br>
-                                            <a href="{% url 'books-delete' book.pk %}" class="btn btn-sm btn-outline-danger rounded-pill mt-3">Delete</a>
-                                            <a href="{% url 'books-update' book.pk %}" class="btn btn-sm btn-outline-info rounded-pill mt-3">Update</a>
-                                        </div>
+        </div>
+        <div class="col-9">
+            <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <!-- user details -->
+                    <p>Username : <span class="text-dark">{{ user.username }}</span></p>
+                    <p>E-Mail : <span class="text-dark">{{ user.email }} </span></p>
+                </div>
+                <div class="tab-pane fade" id="edit-profile" role="tabpanel" aria-labelledby="edit-profile-tab">
+                    <!--edit the user details  -->
+                    <form action="{% url 'update' user.id %}">
+                        <div class="form-label-group">
+                            <input type="text" id="username" name="username" class="form-control" placeholder="Username"
+                                required value="{{ user.username }}">
+                            <label for="username">Username</label>
+                        </div>
+                        <div class="form-label-group">
+                            <input type="email" id="email" name="email" class="form-control" placeholder="Email address"
+                                required value="{{ user.email }}">
+                            <label for="email">Email address</label>
+                        </div>
+                        <button class="btn btn-lg btn-primary rounded-pill" type="submit">Edit</button>
+                    </form>
+                </div>
+                <div class="tab-pane fade" id="added-books" role="tabpanel" aria-labelledby="added-books-tab">
+                    <!-- list of the books added by the user -->
+                    <ul class="list-group list-group-flush">
+                        {% for book in books %}
+                            <li class="list-group-item">
+                                <div class="media">
+                                    <img src="{{ book.image.url }}" class="mr-3" width="80px" alt="...">
+                                    <div class="media-body">
+                                        <a class="mt-0" href="{% url 'books-detail' book.pk %}">{{ book.name }}</a> <br>
+                                        <a href="{% url 'books-delete' book.pk %}"
+                                            class="btn btn-sm btn-outline-danger rounded-pill mt-3">Delete</a>
+                                        <a href="{% url 'books-update' book.pk %}"
+                                            class="btn btn-sm btn-outline-info rounded-pill mt-3">Update</a>
                                     </div>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="tab-pane fade" id="created-requests" role="tabpanel" aria-labelledby="created-requests-tab">
-                        <ul class="list-group list-group-flush">
-                            {% for user_request in user_requests %}
-                                <li class="list-group-item">
-                                    <div class="media">
-                                        <img src="{{ user_request.requested_book.image.url }}" class="mr-3" width="80px" alt="...">
-                                        <div class="media-body">
-                                            <p><span class="text-muted">Requested Book  : </span> {{ user_request.requested_book }}</p>
-                                            <p><span class="text-muted">Requested Trade : </span> {{ user_request.requested_trade }}</p>
-                                            <a href="{% url 'books-request-delete' user_request.id %}" class="btn btn-sm btn-outline-danger rounded-pill mt-1">Delete</a>
-                                            <a href="{% url 'books-request-update' user_request.id %}" class="btn btn-sm btn-outline-info rounded-pill mt-1">Update</a>
-                                        </div>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="tab-pane fade" id="created-requests" role="tabpanel" aria-labelledby="created-requests-tab">
+                    <!-- list of the book request done by the user -->
+                    <ul class="list-group list-group-flush">
+                        {% for user_request in user_requests %}
+                            <li class="list-group-item">
+                                <div class="media">
+                                    <img src="{{ user_request.requested_book.image.url }}" class="mr-3" width="80px"
+                                        alt="...">
+                                    <div class="media-body">
+                                        <p><span class="text-muted">Requested Book : </span>
+                                            {{ user_request.requested_book }}</p>
+                                        <p><span class="text-muted">Requested Trade : </span>
+                                            {{ user_request.requested_trade }}</p>
+                                        <a href="{% url 'books-request-delete' user_request.id %}"
+                                            class="btn btn-sm btn-outline-danger rounded-pill mt-1">Delete</a>
+                                        <a href="{% url 'books-request-update' user_request.id %}"
+                                            class="btn btn-sm btn-outline-info rounded-pill mt-1">Update</a>
                                     </div>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
